Add new column in user table, api verify email, api resend email verify, api blogs and new model blogs
