# src/routes/blog/blogRoute.js
@@ -8,16 +8,26 @@ const {
 const {
   validateRequest,
   validateResponse,
+  validateParams,
+  validateQuery,
 } = require('../../middleware/validationHandler');
 const {
   createBlog,
+  getBlog,
+  getAllBlog,
 } = require('./blogController');
 const {
   createBlogReq,
   createBlogRes,
+  blogIdParam,
+  getBlogRes,
   formDataFieldsUploadConfig,
+  getAllBlogQuery,
+  getAllBlogRes,
 } = require('./blogSchema');
 const formDataFields = require('../../middleware/formDataHandler');
+
+
 const router = express.Router();
 
 // POST /api/v1/blogs
@@ -30,6 +40,22 @@ router.post(
   validateRequest(createBlogReq),
   validateResponse(createBlogRes),
   createBlog,
+);
+
+// GET /api/v1/blogs/{blogId}
+router.get(
+  '/:blogId',
+  validateParams(blogIdParam),
+  validateResponse(getBlogRes),
+  getBlog,
+);
+
+// GET /api/v1/blogs
+router.get(
+  '/',
+  validateQuery(getAllBlogQuery),
+  validateResponse(getAllBlogRes),
+  getAllBlog,
 );
 
 module.exports = router;
